1.6.3: Fixed the error caused by 1.6.2 where the gallery lists were displayed overlapping each other

--- a/hideDefault.css
+++ b/hideDefault.css
@@ -1,3 +1,3 @@
-body {
+.fm_best_widget {
   display: none;
 }
